Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53412

Qt Quick Local Storage: (JS) null (passed as bound parameter) to executeSql() converts to empty string instead of NULL

XMLWordPrintable

    • 6d63e3ba09954ce7b56b4b24432bd036e636b164 (qtdeclarative/5.6, 3.6.2016)

      When calling executeSql() which includes arguments marked with ?, passing null to that argument converts to empty string instead of being NULL in database.

      Steps to reproduce:

      • Run attached sample
      • EXPECTED: Two entries are created in database, with second string being NULL for both entries
      • ACTUAL: Two entries are created, with second string of first entry being empty string

        1. qtbug53412.png
          qtbug53412.png
          3 kB
        2. qtbug53412.zip
          1 kB
        3. qtbug53412.zip
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            shausman Simon Hausmann
            jussi_witick Jussi Witick
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes