Fix bug in SQL database integration with null values

Since commit 91d6a63ab317817990c3b2306860adbd8916cca4 a null JS value is
mapped to a QVariant(VoidStar) to properly create null JS values when
converting back again. However that broke the binding of values in the SQL
database, where it ended up mapping null to an empty string.

[ChangeLog][QtQml] Fix mapping of null JS values to null SQL values instead
of empty strings.

Task-number: QTBUG-53412
Change-Id: Icf1fea4674e9dd8bb5313e3770ed2d3f99849987
Reviewed-by: Robin Burchell <robin.burchell@viroteck.net>